--- a/task4.html
+++ b/task4.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
     <meta charset="UTF-8">
     <title>Title</title>
 
 </head>
 <body>
 <button class="button" onclick="location.href='http://localhost:63342/24-25_Javascript_Test/task4link.html?_ijt=e8v6sv053tastqq3dfqco4pb9j&_ij_reload=RELOAD_ON_SAVE">
-    task 4 linked page
+  task 4 linked page
 
 </button>
 </body>
-</html>/* Put code for the task below */
+</html>
